--- a/index.html
+++ b/index.html
@@ -237,6 +237,31 @@
       padding: 3px 8px !important;
     }
 
+    .mini_plan_class>table>tbody>tr:nth-child(1)>td {
+      padding: 10px 0px !important;
+    }
+
+    .mini_plan_class>table>tbody>tr:nth-child(2)>td {
+      padding: 28px 38px !important;
+    }
+
+    .mini_plan_text_class {
+      word-spacing: 2px !important;
+    }
+
+    .section_7 {
+      background-color: #FEC82D !important;
+    }
+
+    .section_7>table>tbody>tr>td {
+      padding: 0 !important;
+    }
+
+    .section_7_title>div {
+      text-align: center !important;
+      font-weight: 700 !important;
+    }
+
   </style>
 </head>
 
@@ -559,6 +584,72 @@
                                         </tr>
                                       </tbody>
                                     </table>
+                                  </td>
+                                </tr>
+                              </tbody>
+                            </table>
+                          </div>
+                          <!--[if mso | IE]></td></tr></table><![endif]-->
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+                <!--[if mso | IE]></td></tr></table></td></tr><tr><td class="section_6-outlook" width="858px" ><table align="center" border="0" cellpadding="0" cellspacing="0" class="section_6-outlook" role="presentation" style="width:858px;" width="858" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
+                <div class="section_6" style="margin:0px auto;max-width:858px;">
+                  <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="width:100%;">
+                    <tbody>
+                      <tr>
+                        <td style="direction:ltr;font-size:0px;padding:20px 0;text-align:center;">
+                          <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="mini_plan_class-outlook" style="vertical-align:top;width:858px;" ><![endif]-->
+                          <div class="mj-column-per-100 mj-outlook-group-fix mini_plan_class" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;">
+                            <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="vertical-align:top;" width="100%">
+                              <tbody>
+                                <tr>
+                                  <td align="center" style="font-size:0px;padding:10px 25px;word-break:break-word;">
+                                    <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="border-collapse:collapse;border-spacing:0px;">
+                                      <tbody>
+                                        <tr>
+                                          <td style="width:808px;">
+                                            <img alt="Mini-plan banner" src="https://cdn.warriors.com/crm/2021-22/GSW/Ticketing/MiniPlan-Cup-580x150.jpg" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;" width="808" height="auto" />
+                                          </td>
+                                        </tr>
+                                      </tbody>
+                                    </table>
+                                  </td>
+                                </tr>
+                                <tr>
+                                  <td align="left" class="mini_plan_text_class" style="font-size:0px;padding:10px 25px;word-break:break-word;">
+                                    <div style="font-family:sans-serif;font-size:17px;font-weight:500;line-height:1.3;text-align:left;color:#000000;">Secure your Warriors Cup Mini-Plan <span style="color:red; font-weight: 600;     text-decoration: underline;">NOW</span>! This mini-plan gets you better seat locations and pricing, plus save on taxes and fees* for all Warriors Cup games and the Home Opener, presented by Chase Freedom! <span style="color:blue; font-weight: 600;">Learn More &#x2192;</span></div>
+                                  </td>
+                                </tr>
+                              </tbody>
+                            </table>
+                          </div>
+                          <!--[if mso | IE]></td></tr></table><![endif]-->
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+                <!--[if mso | IE]></td></tr></table></td></tr><tr><td class="section_7-outlook" width="858px" ><table align="center" border="0" cellpadding="0" cellspacing="0" class="section_7-outlook" role="presentation" style="width:858px;" width="858" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
+                <div class="section_7" style="margin:0px auto;max-width:858px;">
+                  <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="width:100%;">
+                    <tbody>
+                      <tr>
+                        <td style="direction:ltr;font-size:0px;padding:20px 0;text-align:center;">
+                          <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:top;width:858px;" ><![endif]-->
+                          <div class="mj-column-per-100 mj-outlook-group-fix" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;">
+                            <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="vertical-align:top;" width="100%">
+                              <tbody>
+                                <tr>
+                                  <td align="left" class="section_7_title" style="font-size:0px;padding:10px 25px;word-break:break-word;">
+                                    <div style="font-family:sans-serif;font-size:20px;line-height:1;text-align:left;color:#000000;">Follow Us</div>
+                                  </td>
+                                </tr>
+                                <tr>
+                                  <td align="center" class="section_7_social" style="font-size:0px;padding:10px 25px;word-break:break-word;">
+                                    <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" ><tr></tr></table><![endif]-->
                                   </td>
                                 </tr>
                               </tbody>
